python/testData/highlighting/yieldOutsideOfFunction.py
<error descr="'yield' outside of function">yield 42</error>